examples/test/testpolicy13435.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13435
  namespace: namespace379
spec:
  podSelector:
    matchLabels:
      key45: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value0
          key35: value22
          key1: value23
      podSelector:
        matchLabels:
          key31: value18
          key2: value24
